# xochip

./: .clang-format  .gitignore  CMakeLists.txt  README.md  emulator.c  xochip.h
test/: load_rom.c  opcodes.c  rom.h
